--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:minHeight="@dimen/min_height">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/list_item_icon"
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:src="@tools:sample/avatars" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         app:layout_constraintVertical_bias="0.0"
         tools:text="@tools:sample/cities" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/list_item_secondary_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -56,4 +56,4 @@
         app:layout_constraintTop_toBottomOf="@+id/list_item_text"
         app:layout_constraintVertical_bias="0.0"
         tools:text="@tools:sample/lorem/random" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
