--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -41,8 +41,8 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/list_item_secondary_text"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:alpha="0.6"
         android:ellipsize="end"
         android:maxLines="2"
