--- a/app/src/main/res/layout/activity_restaurant_details.xml
+++ b/app/src/main/res/layout/activity_restaurant_details.xml
@@ -74,7 +74,7 @@
                 tools:text="@tools:sample/cities" />
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"
+                android:layout_height="@dimen/view_size"
                 android:background="@android:color/darker_gray" />
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/images_recycler_view"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content" />
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"
+                android:layout_height="@dimen/view_size"
                 android:background="@android:color/darker_gray" />
 
 
