--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,11 @@
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_big">24dp</dimen>
+    <dimen name="text_size">30sp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+    <dimen name="icon_size">100dp</dimen>
+    <dimen name="min_height">64dp</dimen>
+    <dimen name="image_size">80dp</dimen>
+    <dimen name="view_size">0.5dp</dimen>
 
 </resources>
